로그인 페이지 아이디,비밀번호 edittext 힌트 추가

--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberPassword"
+        android:hint="비밀번호를 입력해주세요"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -62,6 +63,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress"
+        android:hint="전화번호를 입력해주세요"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
